src/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-water-potability-backend-deploy
spec:
  type: ClusterIP

  selector:
    app: ml-water-potability-backend-deploy
  
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
